<resources>
    <string name="app_name">Around</string>

    <!-- Strings with Global Scope -->
    <string name="around_next">Next</string>
    <string name="location">Location</string>
    <string name="update">Update</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="ok">Ok</string>
    <string name="submit">Submit</string>
    <string name="sports">Sports</string>
    <string name="concert">Concert</string>
    <string name="study">Study</string>
    <string name="travel">Travel</string>
    <string name="other">Other</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="back">Back</string>
    <string name="buddy_for_title">Buddy for:</string>
    <string name="buddy_for">Buddy for: %s</string>
    <string name="playing">Playing %s</string>
    <string name="studying">Studying %s</string>
    <string name="name_concert">%s Concert</string>
    <string name="from_source_to_destination_post_text">Travelling from %1$s to %2$s</string>
    <string name="age_range_post_text">Age Range: %1$d - %2$d years</string>
    <string name="gender_preference_post_text">Gender: %1$s</string>
    <string name="post_detail">Post Detail</string>
    <string name="rotate">Rotate</string>
    <string name="crop">Crop</string>
    <string name="comments">Comments</string>
    <string name="cancel">Cancel</string>

    <!-- Strings for Home Activity -->
    <string name="home">Home</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>

    <!-- Strings for Login Activity -->
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="logout_heading">Are you sure?</string>
    <string name="logout_message">You’re about to log out.</string>

    <!-- Strings for Register Activity -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email Address</string>`
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="all_details_alert">Please fill all the details.</string>
    <string name="gender_alert">Please select a gender.</string>
    <string name="location_alert">Around is a location based application. Please provide permission to access your
        location.
    </string>
    <string name="verification_text">A verification email has been sent to the email you entered. Please verify your
        account and return to the application.
    </string>
    <string name="got_it">Got it!!</string>
    <string name="invalid_email_message">Email Address entered is invalid. Please try again with valid Email Address.
    </string>
    <string name="invalid_phone_number_message">Phone Number entered is invalid. Please try again with valid Phone
        Number.
    </string>
    <string name="invalid_dob_message">You should be at least 12 years old to use this application. Please try again
        with valid Date of Birth.
    </string>
    <string name="pick_image_from">Pick Profile Image from:</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>

    <!-- Strings for New Post -->
    <string name="sport_name">Sport Name:</string>
    <string name="study_subject">Study Subject:</string>
    <string name="study_topic">Study Topic:</string>
    <string name="travel_from">Travel from:</string>
    <string name="travel_to">Travel to:</string>
    <string name="concert_band">Band Name:</string>
    <string name="other_post_for">Post for:</string>
    <string name="request_type">Request Type</string>
    <string name="select_post_type">Please select the type of your request.</string>
    <string name="select_sport">Please select a Sport</string>
    <string name="pick_sport_dialog_message">Please select a Sport for your Sport request.</string>
    <string name="pick_study_dialog_message">Please enter a Study topic for your Study request.</string>
    <string name="pick_concert_dialog_message">Please enter a Band Name for your Concert request.</string>
    <string name="pick_travel_source_dialog_message">Please enter Source for your Travel request.</string>
    <string name="pick_travel_destination_dialog_message">Please enter Destination for your Travel request.</string>
    <string name="pick_other_dialog_message">Please enter a Title for your request.</string>
    <string name="pick_date">Please select a Date for your post.</string>
    <string name="pick_time">Please pick a Time for your post.</string>
    <string name="pick_min_age">Please pick a Minimum Age for your post.</string>
    <string name="pick_max_age">Please pick a Maximum Age for your post.</string>
    <string name="pick_gender_preference">Please select the gender preference for your post.</string>
    <string name="pick_description">Please write some description for your post.</string>
    <string name="on">On</string>
    <string name="search">Search</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="location_title">Location:</string>
    <string name="new_post">New Post</string>
    <string name="please_fill">Please fill all the details</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="age_range">Age Range:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="no_preference">No Preference</string>
    <string name="gender">Gender:</string>
    <string name="gender_preference">Gender Preference:</string>
    <string name="enter_a_location">Enter a location</string>
    <string name="description">Description:</string>
    <string name="enter_description">Enter some description</string>
    <string name="years">years</string>
    <string name="age_range_failing_message">Please enter the proper age range. Minimum age should be less than maximum
        age. Allowed age range is between 12 to 120 years.
    </string>
    <string name="review_submit">Review and Submit</string>
    <string name="post_success_message">You have successfully posted your request.</string>
    <string name="new_post_user_agreement_disclaimer">By clicking Submit, I authorize to post the request in accordance 
        with <![CDATA[<a href="%1$s">User Agreement</a>]]>.
    </string>
    <string name="incomplete">Incomplete</string>
    <string name="no_comments_header">No Comments, yet.</string>
    <string name="no_comments_message">No comments for this post, yet! You can add one below.</string>
    <string name="enter_comment">Enter Comment</string>

    <array name="gender_preference_options">
        <item>Male</item>
        <item>Female</item>
        <item>No Preference</item>
    </array>

    <array name="gender_options">
        <item>Male</item>
        <item>Female</item>
    </array>

    <!-- Strings for User Profile -->
    <string name="user_profile">USER PROFILE</string>
    <string name="help_and_settings">HELP AND SETTINGS</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="user_posts">Your Posts</string>
    <string name="feedback">Feedback</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="logout">Log Out</string>
    <string name="posts_search_radius">Post Search Radius</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="progress_indicator">In Progress</string>

    <!-- Sports Names -->
    <string name="cricket">Cricket</string>
    <string name="football">Football</string>
    <string name="baseball">Baseball</string>
    <string name="badminton">Badminton</string>
    <string name="ping_pong">Ping Pong</string>
    <string name="tennis">Tennis</string>
    <string name="soccer">Soccer</string>
    <string name="gym">Gym</string>
    <string name="basketball">Basketball</string>
    <string name="lacrosse">Lacrosse</string>
    <string name="volleyball">Volleyball</string>
    <string name="boxing">Boxing</string>
    <string name="ice_hockey">Ice Hockey</string>
    <string name="bowling">Bowling</string>

    <!-- Strings for Feedback Screen-->
    <string name="enter_feedback">Please enter the feedback below:</string>
    <string name="send">Send</string>
    <string name="feedback_notice">Your feedback will be send to bhavesh.lath@gmail.com .</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>


    <!-- Strings for Home Posts Screen-->
    <string name="no_posts_text">No posts currently in your area. Keep Looking.</string>

    <!-- Strings for Home Search Screen-->
    <string name="search_keyword">Search Keyword</string>
    <string name="search_for_buddies">Search for buddies near you related to any topic.</string>

    <!-- Strings for Home Messages Fragment -->
    <string name="no_messages_text">You don\'t have any messages yet. Send a post, start a conversation and make connections near you.</string>

</resources>
