<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/action_home"
            android:enabled="true"
            android:icon="@drawable/ic_home"
            android:title="@string/home"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_search"
            android:enabled="true"
            android:icon="@drawable/ic_search"
            android:title="@string/search"
            app:showAsAction="ifRoom" />
    <item
            android:id="@+id/action_messages"
            android:enabled="true"
            android:icon="@drawable/ic_mail"
            android:title="@string/messages"
            app:showAsAction="ifRoom" />
    <item
            android:id="@+id/action_profile"
            android:enabled="true"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile"
            app:showAsAction="ifRoom" />
</menu>