<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_medium"
        tools:context="com.example.blath.around.activities.RegisterActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ImageView
                android:src="@drawable/ic_user"
                android:id="@+id/register_user_image"
                android:layout_width="@dimen/register_user_image"
                android:layout_height="@dimen/register_user_image"
                android:layout_gravity="center_horizontal"/>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:weightSum="2">
            <EditText
                    android:id="@+id/register_first_name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
            android:hint="@string/first_name"/>
            <EditText
                    android:id="@+id/register_last_name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/last_name"/>
        </LinearLayout>

        <EditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:ems="10"/>

        <EditText
                android:id="@+id/register_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/phone_number"
                android:ems="10"/>
        <EditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:ems="10"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="4">

            <View android:layout_width="0dp"
                  android:layout_height="@dimen/divider_normal"
                  android:layout_weight="1.5"
                  android:background="@color/black_50"
                  android:layout_gravity="center_vertical"/>
            <TextView android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:layout_margin="@dimen/margin_small"
                      android:text="@string/posts_radius"/>
            <View android:layout_width="0dp"
                  android:layout_height="@dimen/divider_normal"
                  android:layout_weight="1.5"
                  android:background="@color/black_50"
                  android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <SeekBar android:id="@+id/profile_range"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
        <Button
                android:id="@+id/register_button"
                android:text="@string/register"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                style="@drawable/button_white_rounded"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_alignParentBottom="true"/>

        <include layout="@layout/layout_progress"/>

    </LinearLayout>

</ScrollView>
