<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.example.blath.around.fragments.HomeSearchFragment"
              android:background="@color/white_56"
              android:animateLayoutChanges="true">
    <LinearLayout
            android:id="@+id/search_area"
            android:background="@drawable/button_white_rounded"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium">
        <LinearLayout
                android:id="@+id/post_type_button_list1"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small">
            <Button android:id="@+id/sports_type"
                    android:layout_width="@dimen/search_type_button_width"
                    android:layout_height="@dimen/search_type_button_height"
                    android:text="@string/sports"
                    android:textSize="@dimen/text_size_xsmall"
                    android:background="@color/black"
                    android:textColor="@color/white"
                    style="@style/SmallerButtonStyle"/>
            <Button android:id="@+id/study_type"
                    android:layout_width="@dimen/search_type_button_width"
                    android:layout_height="@dimen/search_type_button_height"
                    android:text="@string/study"
                    android:textSize="@dimen/text_size_xsmall"
                    android:background="@color/black"
                    android:textColor="@color/white"
                    android:layout_marginTop="@dimen/margin_small"
                    style="@style/SmallerButtonStyle"/>
            <Button android:id="@+id/travel_type"
                    android:layout_width="@dimen/search_type_button_width"
                    android:layout_height="@dimen/search_type_button_height"
                    android:text="@string/travel"
                    android:textSize="@dimen/text_size_xsmall"
                    android:background="@color/black"
                    android:textColor="@color/white"
                    android:layout_marginTop="@dimen/margin_small"
                    style="@style/SmallerButtonStyle"/>
            <Button android:id="@+id/concert_type"
                    android:layout_width="@dimen/search_type_button_width"
                    android:layout_height="@dimen/search_type_button_height"
                    android:text="@string/concert"
                    android:textSize="@dimen/text_size_xsmall"
                    android:background="@color/black"
                    android:textColor="@color/white"
                    android:layout_marginTop="@dimen/margin_small"
                    style="@style/SmallerButtonStyle"/>
            <Button android:id="@+id/other_type"
                    android:layout_width="@dimen/search_type_button_width"
                    android:layout_height="@dimen/search_type_button_height"
                    android:text="@string/other"
                    android:textSize="@dimen/text_size_xsmall"
                    android:background="@color/black"
                    android:textColor="@color/white"
                    android:layout_marginTop="@dimen/margin_small"
                    style="@style/SmallerButtonStyle"/>
        </LinearLayout>
        <View android:id="@+id/section_divider"
              android:layout_width="2dp"
              android:layout_height="match_parent"
              android:background="@color/yellow"
              android:layout_margin="@dimen/margin_small"/>
        <LinearLayout android:id="@+id/search_keywords_container"
                      android:orientation="vertical"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_margin="@dimen/margin_small">
            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/search_keyword"/>
            <Button
                    android:id="@+id/search_button"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/button_blue_rounded"
                    android:text="@string/search"
                    android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>
    <ImageView
            android:id="@+id/arrow_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_up_arrow_blue"/>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="@dimen/margin_large">
        <ImageView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/ic_home_search"/>
        <TextView android:id="@+id/no_result_text"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:textSize="@dimen/text_size_h2"
                  android:textColor="@color/black"
                  android:textAlignment="center"
                  android:text="@string/search_for_buddies"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/search_posts_recycler"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
</LinearLayout>
