<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:padding="@dimen/padding_medium"
              android:layout_width="300dp"
              android:layout_height="180dp">
    <TextView android:textSize="@dimen/text_size_h2" android:textColor="@color/around_background_end_color"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/pick_image_from"/>
    <LinearLayout android:id="@+id/option_camera" android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:padding="@dimen/padding_small">
        <ImageView android:layout_width="@dimen/posts_user_icon"
                   android:layout_height="@dimen/posts_user_icon" android:src="@drawable/ic_camera"/>
        <TextView android:layout_width="wrap_content" android:layout_marginLeft="@dimen/margin_small"
                  android:layout_height="wrap_content" android:textSize="@dimen/text_size_h3"
                  android:layout_gravity="center_vertical" android:text="@string/camera"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/option_gallery" android:layout_width="match_parent" android:layout_height="wrap_content"
            android:padding="@dimen/padding_small">
        <ImageView android:layout_width="@dimen/posts_user_icon"
                   android:layout_height="@dimen/posts_user_icon"
                   android:src="@drawable/ic_gallery"/>
        <TextView android:layout_marginLeft="@dimen/margin_small" android:layout_width="wrap_content"
                  android:layout_gravity="center_vertical"
                  android:layout_height="wrap_content" android:textSize="@dimen/text_size_h3"
                  android:text="@string/gallery"/>
    </LinearLayout>
</LinearLayout>