<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gradient_blue_15">
    <include layout="@layout/app_bar_short_transparent"/>
    <android.support.v7.widget.RecyclerView
            android:id="@+id/comments_recycler"
            android:scrollbars="vertical"
            android:padding="@dimen/padding_small"
            android:layout_below="@+id/toolbar"
            android:layout_above="@+id/new_comment_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <TextView android:id="@+id/no_comments_heading"
              android:text="@string/no_comments_header"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="@color/blue"
              android:textStyle="bold"
              android:textSize="@dimen/text_size_h2"
              android:layout_centerInParent="true"
              android:visibility="gone"/>
    <TextView android:id="@+id/no_comments_message"
              android:layout_below="@id/no_comments_heading"
              android:layout_centerHorizontal="true"
              android:text="@string/no_comments_message"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textAlignment="center"
              android:visibility="gone"/>
    <LinearLayout
            android:id="@+id/new_comment_container"
            android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_alignParentBottom="true"
                  android:layout_margin="@dimen/margin_xsmall"
                  android:padding="@dimen/padding_xsmall"
                  android:weightSum="10"
                  android:background="@drawable/button_white_rounded">
        <EditText
                android:id="@+id/new_comment_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:hint="@string/enter_comment"
                style="@style/PrimaryText.Dark"
                android:textColorHint="@color/gray"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLength="2000"
                android:maxLines="5"/>
        <Button
                android:id="@+id/new_comment_submit"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="2"
                android:background="@drawable/button_blue_rounded"
                android:layout_alignParentBottom="true"
                android:text="@string/submit"
                style="@style/SecondaryText.Light"/>
    </LinearLayout>
</RelativeLayout>